--- a/GamingWorld/index.html
+++ b/GamingWorld/index.html
@@ -26,7 +26,7 @@
         </header>
 
         <!-- Main video section  -->
-        <section class="hero-section">
+        <section class="hero-section autoBlur">
             <div class="hero-vid">
                 <video loop autoplay muted plays-inline class="hero-video">
                     <source src="videos/hero-1.mp4" type="video/mp4">
@@ -49,9 +49,11 @@
     <div class="container">
         <section id="about" class="about-section">
             <p>Welcome to Valoroid</p>
-            <h1>DISCOVER THE WORLD'S LARGEST SHARDED ADVENTURE</h1>
+            <div class="autoBlur">
+                <h1>DISCOVER THE WORLD'S LARGEST SHARDED ADVENTURE</h1>
+            </div>
     
-            <div class="image-box">
+            <div class="image-box autoTakeFull">
                 <img src="img/about.webp" alt="about-img">
             </div>
             <h4>Game of Games begins-your life, now an epic MMORPG</h4>
@@ -63,7 +65,7 @@
             <p>A cross platform metagame app, turning your activities across Web2 and Web3 games into a </p>
 
             <div class="info-cards">
-                <div class="card">
+                <div class="card autoDisplay">
                     <h1>RADIANT</h1>
                     <p>An anime and gaming-inspired NFT collection - the IP primed for expansion.</p>
 
@@ -71,7 +73,7 @@
                     <button>COMING SOON</button>
                 </div>
 
-                <div class="card">
+                <div class="card autoDisplay">
                     <h1>ZIGMA</h1>
                     <p>An anime and gaming-inspired NFT collection - the IP primed for expansion.</p>
 
@@ -79,7 +81,7 @@
                     <button>COMING SOON</button>
                 </div>
 
-                <div class="card">
+                <div class="card autoDisplay">
                     <h1>NEXUS</h1>
                     <p>An anime and gaming-inspired NFT collection - the IP primed for expansion.</p>
 
@@ -87,7 +89,7 @@
                     <button>COMING SOON</button>
                 </div>
 
-                <div class="card">
+                <div class="card autoDisplay">
                     <h1>AIZEN</h1>
                     <p>An anime and gaming-inspired NFT collection - the IP primed for expansion.</p>
 
@@ -95,11 +97,11 @@
                     <button>COMING SOON</button>
                 </div>
 
-                <div class="card">
+                <div class="card autoDisplay">
                     <video src="videos/feature-5.mp4" autoplay loop muted plays-inline></video>
                 </div>
 
-                <div class="card">
+                <div class="card autoDisplay">
                     <h1>MORE COMING SOON</h1>
                 </div>
             </div>
@@ -108,7 +110,9 @@
          <!-- Contact Section  -->
          <section class="contact-section">
             <p>Join Valoroid</p>
-            <h1>LET'S BUILD THE NEW ERA OF GAMING TOGETHER</h1>
+            <div class="autoBlur">
+                <h1>LET'S BUILD THE NEW ERA OF GAMING TOGETHER</h1>
+            </div>
             <button>CONTACT US</button>
             <img class="img1" src="img/swordman.webp" alt="contact-img">
             <img class="img2" src="img/contact-1.webp" alt="contact-img">
