--- a/GamingWorld/index.html
+++ b/GamingWorld/index.html
@@ -132,7 +132,7 @@
             <p>Privacy Policy</p>
          </section>
     </div>
-
+    <div class="cursor"></div> 
 
     <script src="app.js"></script>
 </body>
