--- a/GamingWorld/index.html
+++ b/GamingWorld/index.html
@@ -52,7 +52,7 @@
             <div class="autoBlur">
                 <h1>DISCOVER THE WORLD'S LARGEST SHARDED ADVENTURE</h1>
             </div>
-    
+            <img class="stones-img" src="img/stones.png" alt="stones-image">
             <div class="image-box autoTakeFull">
                 <img src="img/about.webp" alt="about-img">
             </div>
