--- a/MovieWebsite/index.html
+++ b/MovieWebsite/index.html
@@ -190,51 +190,56 @@
             </div>
         </div>
 
-                    <!-- Thumbnail  -->
-            <div class="thumbnail">
-                <div class="item">
-                    <img src="image/1.png" alt="image1">
-                    <div class="thum-content">
-                        <div class="title">Squid Game</div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="image/2.png" alt="image1">
-                    <div class="thum-content">
-                        <div class="title">Squid Game</div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="image/3.png" alt="image1">
-                    <div class="thum-content">
-                        <div class="title">Squid Game</div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="image/4.png" alt="image1">
-                    <div class="thum-content">
-                        <div class="title">Squid Game</div>
-                    </div>
-                </div>
-
-
-                <div class="item">
-                    <img src="image/5.png" alt="image1">
-                    <div class="thum-content">
-                        <div class="title">Squid Game</div>
-                    </div>
-                </div>
-
-                <div class="item">
-                    <img src="image/6.png" alt="image1">
-                    <div class="thum-content">
-                        <div class="title">Squid Game</div>
-                    </div>
+        <!-- Thumbnail  -->
+        <div class="thumbnail">
+            <div class="item">
+                <img src="image/1.png" alt="image1">
+                <div class="thum-content">
+                    <div class="title">Squid Game</div>
                 </div>
             </div>
+
+            <div class="item">
+                <img src="image/2.png" alt="image1">
+                <div class="thum-content">
+                    <div class="title">Squid Game</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="image/3.png" alt="image1">
+                <div class="thum-content">
+                    <div class="title">Squid Game</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="image/4.png" alt="image1">
+                <div class="thum-content">
+                    <div class="title">Squid Game</div>
+                </div>
+            </div>
+
+
+            <div class="item">
+                <img src="image/5.png" alt="image1">
+                <div class="thum-content">
+                    <div class="title">Squid Game</div>
+                </div>
+            </div>
+
+            <div class="item">
+                <img src="image/6.png" alt="image1">
+                <div class="thum-content">
+                    <div class="title">Squid Game</div>
+                </div>
+            </div>
+        </div>
+
+        <div class="arrows">
+            <button class="prev"><</button>
+            <button class="next">></button>
+        </div>
     </div>
 </body>
 
