--- a/MovieWebsite/index.html
+++ b/MovieWebsite/index.html
@@ -10,7 +10,7 @@
 
 <body>
     <header>
-        <h1><span style="color: #ff0040;">MD</span>VD</h1>
+        <h1><span class="text-gradient">Movie</span>HUB</h1>
         <nav>
             <a href="#">Home</a>
             <a href="#">Movie</a>
@@ -57,12 +57,12 @@
             <div class="item">
                 <img src="image/2.png" alt="image2">
                 <div class="content">
-                    <h1>Squid Game</h1>
+                    <h1>One Piece</h1>
                     <div class="details">
-                        <p>2021</p>
+                        <p>2005</p>
                         <p>16+</p>
-                        <p>2 season</p>
-                        <p>Drama</p>
+                        <p>6 Season</p>
+                        <p>Adventure</p>
                     </div>
 
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid reiciendis soluta eius
@@ -84,11 +84,11 @@
             <div class="item">
                 <img src="image/3.png" alt="image3">
                 <div class="content">
-                    <h1>Squid Game</h1>
+                    <h1>Shōgun</h1>
                     <div class="details">
-                        <p>2021</p>
+                        <p>2024</p>
                         <p>16+</p>
-                        <p>2 season</p>
+                        <p>Movie</p>
                         <p>Drama</p>
                     </div>
 
@@ -111,12 +111,12 @@
             <div class="item">
                 <img src="image/4.png" alt="image4">
                 <div class="content">
-                    <h1>Squid Game</h1>
+                    <h1>Demon Slayer</h1>
                     <div class="details">
                         <p>2021</p>
                         <p>16+</p>
-                        <p>2 season</p>
-                        <p>Drama</p>
+                        <p>4 Season</p>
+                        <p>Action</p>
                     </div>
 
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid reiciendis soluta eius
@@ -138,11 +138,11 @@
             <div class="item">
                 <img src="image/5.png" alt="image5">
                 <div class="content">
-                    <h1>Squid Game</h1>
+                    <h1>Game of Thrones</h1>
                     <div class="details">
-                        <p>2021</p>
+                        <p>2019</p>
                         <p>16+</p>
-                        <p>2 season</p>
+                        <p>8 season</p>
                         <p>Drama</p>
                     </div>
 
@@ -165,12 +165,12 @@
             <div class="item">
                 <img src="image/6.png" alt="image6">
                 <div class="content">
-                    <h1>Squid Game</h1>
+                    <h1>jujutsu kaisen</h1>
                     <div class="details">
                         <p>2021</p>
                         <p>16+</p>
                         <p>2 season</p>
-                        <p>Drama</p>
+                        <p>Adventure</p>
                     </div>
 
                     <h4>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid reiciendis soluta eius
@@ -200,38 +200,38 @@
             </div>
 
             <div class="item">
-                <img src="image/2.png" alt="image1">
+                <img src="image/2.png" alt="image2">
                 <div class="thum-content">
-                    <div class="title">Squid Game</div>
+                    <div class="title">One Piece</div>
                 </div>
             </div>
 
             <div class="item">
-                <img src="image/3.png" alt="image1">
+                <img src="image/3.png" alt="image3">
                 <div class="thum-content">
-                    <div class="title">Squid Game</div>
+                    <div class="title">Shōgun</div>
                 </div>
             </div>
 
             <div class="item">
-                <img src="image/4.png" alt="image1">
+                <img src="image/4.png" alt="image4">
                 <div class="thum-content">
-                    <div class="title">Squid Game</div>
+                    <div class="title">Demon Slayer</div>
                 </div>
             </div>
 
 
             <div class="item">
-                <img src="image/5.png" alt="image1">
+                <img src="image/5.png" alt="image5">
                 <div class="thum-content">
-                    <div class="title">Squid Game</div>
+                    <div class="title">Game of Thrones</div>
                 </div>
             </div>
 
             <div class="item">
-                <img src="image/6.png" alt="image1">
+                <img src="image/6.png" alt="image6">
                 <div class="thum-content">
-                    <div class="title">Squid Game</div>
+                    <div class="title">jujutsu kaisen</div>
                 </div>
             </div>
         </div>
@@ -241,6 +241,9 @@
             <button class="next">></button>
         </div>
     </div>
+
+    <div class="time"></div>
+    <script src="app.js"> </script>
 </body>
 
 </html>
